--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         rxjava_version2 = '3.0.0'
         koin_version= '2.0.1'
         retrofit_version = '2.9.0'
+        fastjson_version = '2.2.0'
         kotlin_version = '1.3.72'
         coroutines_version = '1.3.0'
         paging_version = '2.1.2'
